# python-project-lvl1

./: Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: cli.py
brain_games/cores/: core.py
brain_games/games/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  even.py  gcd.py  prime.py  progression.py  run_game.py
