[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "brain games"
authors = ["dirty_hippy"]
repository = "https://github.com/DirtyHippy/python-project-lvl1.git"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[tool.poetry.scripts]
brain-games = "brain_games.games.brain_games:main"
brain-even = "brain_games.scripts.even:run_even"
brain-calc = "brain_games.scripts.calc:run_calc"
brain-gcd = "brain_games.scripts.gcd:run_gcd"
brain-progression = "brain_games.scripts.progression:run_progression"
brain-prime = "brain_games.scripts.prime:run_prime"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
